--- a/full_Design_of_the_height_of_the_Column.ipynb
+++ b/full_Design_of_the_height_of_the_Column.ipynb
@@ -6,7 +6,7 @@
       "name": " full Design of the height of the Column.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfMurkNk8RsleC3mxC1JM6",
+      "authorship_tag": "ABX9TyMKLXnZUKhdAUwi+1vEGx7T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,10 +93,10 @@
       "cell_type": "code",
       "source": [
         "#air pressure at bot and top position relative to humidity\n",
-        "P_v_sat=610.78*(math.exp((17.2693882*((t_air_in+273.15-273.16))/((t_air_in+273.15)-35.86))))\n",
-        "P_V_unsat_in=101325*y_in/(y_in+0.622)\n",
+        "P_v_sat=610.78*(math.exp((17.2693882*((t_air_in+273.15-273.16))/((t_air_in+273.15)-35.86)))) #sat vapor pressure\n",
+        "P_V_unsat_in=101325*y_in/(y_in+0.622)   #value of water vapor pressure at inlet conditions unsat\n",
         "P_V_unsat_out=101325*y_out/(y_out+0.622)\n",
-        "RH_in=P_V_unsat_in/P_v_sat\n",
+        "RH_in=P_V_unsat_in/P_v_sat  #relative humidity cal\n",
         "RH_out=P_V_unsat_out/P_v_sat"
       ],
       "metadata": {
@@ -109,17 +109,17 @@
       "cell_type": "code",
       "source": [
         "#To calculate the mole fraction for inlet\n",
-        "n_in_h2O=y_in/18\n",
-        "n_in_air=(1-y_in)/29\n",
-        "X_in=n_in_h2O/(n_in_h2O+n_in_air)\n",
+        "n_in_h2O=y_in/18         #Calculations of no of moles of water vapor\n",
+        "n_in_air=(1-y_in)/29      #Calculations of no of moles air\n",
+        "X_in=n_in_h2O/(n_in_h2O+n_in_air) #Calculations of mole fraction at inlet for water vapor\n",
         "\n",
         "#To calculate the mole fraction for inlet\n",
         "n_out_h2O=y_out/18\n",
         "n_out_air=(1-y_out)/29\n",
-        "X_out=n_out_h2O/(n_out_h2O+n_out_air)\n",
+        "X_out=n_out_h2O/(n_out_h2O+n_out_air) #Calculations of mole fraction at outlet for water vapor\n",
         "\n",
         "# Total mole fraction difference\n",
-        "Del_y=X_in-X_out"
+        "Del_y=X_in-X_out        #difference in mole fraction"
       ],
       "metadata": {
         "id": "q8SiUWQKncD7"
@@ -206,9 +206,10 @@
       "source": [
         "#To calculate the log mean pressure difference\n",
         "LMPD_atm=((del_p_top-del_p_bottom)/math.log(del_p_top/del_p_bottom))/101325\n",
+        "\n",
         "# To calculate the no of transfer units\n",
-        "P=1.0\n",
-        "NO_G=P*Del_y/LMPD_atm"
+        "P=1.0   # pressure in atm\n",
+        "NO_G=P*Del_y/LMPD_atm   "
       ],
       "metadata": {
         "id": "HTeIBllMncLj"
@@ -268,7 +269,7 @@
         "f2=0.540966\n",
         "f3=-0.303792\n",
         "f4=0.100791\n",
-        "density_of_solution=round(density_of_water*(f1+f2*y**2+f3*y**3+f4*y**4),4)"
+        "density_of_solution=round(density_of_water*(f1+f2*y**2+f3*y**3+f4*y**4),4) #Kg/m3"
       ],
       "metadata": {
         "id": "q2tjkc8LxCAT"
@@ -280,21 +281,19 @@
       "cell_type": "code",
       "source": [
         "import math\n",
-        "sin_thetha=math.sin(Thetha_sin*(math.pi)/180)\n",
-        "A=0.3*0.3\n",
-        "\n",
-        "\n",
+        "sin_thetha=math.sin(Thetha_sin*(math.pi)/180) #Currugation angle\n",
+        "A=0.3*0.3   #Crosssection of the packing\n",
         "g_e=9.81\n",
         "if surface_tension_solution<0.055:\n",
         "  cos_gamma=0.9\n",
         "else:\n",
         "  cos_gamma=5.211*10**(-16.835*surface_tension_solution)\n",
-        "U_L=L/(density_of_solution*A)\n",
-        "We_L=U_L**2*density_of_solution*S_side/surface_tension_solution\n",
-        "Fr_L=U_L**2/(S_side*g_e)\n",
-        "Re_L=U_L*S_side*density_of_solution/visco_solu\n",
+        "U_L=L/(density_of_solution*A)    #liquid superficial velocity\n",
+        "We_L=U_L**2*density_of_solution*S_side/surface_tension_solution #Weber no\n",
+        "Fr_L=U_L**2/(S_side*g_e)    #Froude no\n",
+        "Re_L=U_L*S_side*density_of_solution/visco_solu #Reynolds no\n",
         "C_tot=29.12*(We_L*Fr_L)**0.15*S_side**0.359/(Re_L**0.2*void_fraction**0.6*(1-0.93*cos_gamma)*sin_thetha**0.3)\n",
-        "h_tot=(4*C_tot/S_side)**(2/3)*(3*visco_solu*U_L/(density_of_solution*void_fraction*sin_thetha*g_e))**(1/3)\n",
+        "h_tot=(4*C_tot/S_side)**(2/3)*(3*visco_solu*U_L/(density_of_solution*void_fraction*sin_thetha*g_e))**(1/3) #Total Liquid holdup in fraction\n",
         "\n",
         "#Effective Velocity of fluids\n",
         "U_LE=L/((1123*A)*(void_fraction*h_tot*sin_thetha))\n",
@@ -309,9 +308,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#Al farayadhi equations\n",
-        "FgA=0.55*(U_LE)**0.1*U_GE**0.79*math.exp(-0.0293*t_air_in)\n",
-        "FLA=8.2*U_LE**0.4*U_GE**0.07*(math.exp(-0.038*t_des_in))*(math.exp(0.009*x_in))"
+        "#Al farayadhi equations \n",
+        "FgA=0.55*(U_LE)**0.1*U_GE**0.79*math.exp(-0.0293*t_air_in) #Gas side mass transfer coeffcient\n",
+        "FLA=8.2*U_LE**0.4*U_GE**0.07*(math.exp(-0.038*t_des_in))*(math.exp(0.009*x_in)) #liquid side mass transfer coeffcient"
       ],
       "metadata": {
         "id": "C-2VK7xxni17"
@@ -323,20 +322,20 @@
       "cell_type": "code",
       "source": [
         "#To calculate the heat transfer equivalent height\n",
-        "A=1\n",
-        "KgA=FgA*3600/(P*0.4536*3.28**3)\n",
-        "G_M=G*3600/(0.4536*29)\n",
+        "A=1 #Cross sectional area in Ft2\n",
+        "KgA=FgA*3600/(P*0.4536*3.28**3)   # to convert the F type mass transfer to K type to british units \n",
+        "G_M=G*3600/(0.4536*29) #Molar flow of the gas\n",
         "HG=G_M/(A*KgA*P)\n",
         "\n",
         "# To calculate the Liquid side heat transfer equi height\n",
-        "KLA=FLA*3600/(0.4536*3.28**3)\n",
-        "M_equi=(1-x_in)*18+x_in*42.394\n",
-        "L_M=L*3600/(0.4536*M_equi)\n",
+        "KLA=FLA*3600/(0.4536*3.28**3) # to convert the F type mass transfer to K type to british units\n",
+        "M_equi=(1-x_in)*18+x_in*42.394 # molar mass of the desiccant solution\n",
+        "L_M=L*3600/(0.4536*M_equi)  #Molar flow of the liquid\n",
         "HL=L_M/(A*KLA)\n",
         "\n",
         "#To calculate the slope\n",
-        "M_slope=1\n",
-        "Lambda_slope=M_slope*G_M/L_M\n",
+        "M_slope=1 #Considered both oerating and equilibrium lines are nearly parallel and straight\n",
+        "Lambda_slope=M_slope*G_M/L_M  \n",
         "\n",
         "# To calculate The HO_G\n",
         "HO_G=HG+Lambda_slope*HL\n",
